src/objects/Reservation__c.object
<CustomObject>
    <description>Reservation system</description>
    <fields>
        <fullName>End_Date__c</fullName>
        <description>End date</description>
        <inlineHelpText>End Date</inlineHelpText>
        <label>End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Reservation_Status__c</fullName>
        <description>Status of the Reservation</description>
        <formula>IF (!ISNULL(End_Date__c) ,
/* if no end date , TRUE value*/
IF(  TODAY() &gt;=  Start_Date__c &amp;&amp; TODAY() &lt;= End_Date__c, 
1, 
0) ,
/* if no end date , FALSE value*/
IF ( TODAY() &gt;= Start_Date__c ,
1,
0)
/* Close the initial IF */
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Reservation Status</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Reserved_Server__c</fullName>
        <label>Reserved Server</label>
        <referenceTo>Server__c</referenceTo>
        <relationshipLabel>Server Reservations</relationshipLabel>
        <relationshipName>Reservations</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
        <writeRequiresMasterRead>true</writeRequiresMasterRead>
    </fields>
    <fields>
        <fullName>Reserved_User__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Reserved User</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Reservations</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Reserved__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Status of the reservation</description>
        <inlineHelpText>Status of the reservation</inlineHelpText>
        <label>Reserved</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Start_Date__c</fullName>
        <defaultValue>Today()</defaultValue>
        <description>Reservation start date</description>
        <inlineHelpText>Reservation start date</inlineHelpText>
        <label>Start Date</label>
        <required>true</required>
        <type>Date</type>
    </fields>
    <label>Reservation</label>
    <nameField>
        <displayFormat>RID-{0000}</displayFormat>
        <label>Reservation ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Reservations</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>